@@ -87,7 +87,7 @@ echo "</table>" >> $TABLE_HTML
 
 sed "/<!-- HTML TABLE STARTS HERE -->/r ${TABLE_HTML}" $TEMPLATE > $INDEX_HTML
 
-NOW="$(date)"
+NOW="$(date --utc)"
 sed "s|<\!-- TODAY DATE -->|$NOW|" $INDEX_HTML > temp.xxx
 mv temp.xxx $INDEX_HTML 
 rm $TABLE_HTML
